refactor payment providers to use tenant config UUIDs